--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -294,13 +294,11 @@ RUN if [[ -n "$CUDA_VERSION" ]] &&  [[ -z "${PYTORCH_NIGHTLY_URL}" ]]; then \
 RUN if [ -n "$CUDA_VERSION" ] ; then \
         pip${PYTHON_VERSION} install --upgrade --no-cache-dir ninja==1.11.1 && \
         pip${PYTHON_VERSION} install --upgrade --no-cache-dir --force-reinstall packaging==22.0 && \
-        pip${PYTHON_VERSION} install --no-cache-dir flash-attn==1.0.9; \
+        git clone https://github.com/Dao-AILab/flash-attention.git && \
+        cd flash-attention && \
+        MAX_JOBS=4 python setup.py install && \
+        cd ..; \
     fi
-
-RUN git clone https://github.com/Dao-AILab/flash-attention.git
-RUN cd flash-attention
-RUN MAX_JOBS=4 python setup.py install
-RUN cd ..
 
 ###############
 # Install cmake
