--- a/pyproject.toml
+++ b/pyproject.toml
@@ -152,7 +152,7 @@ filterwarnings = [
     # Ignore torch sharded tensor deprecated warnings
     '''ignore:Please use DTensor instead and we are deprecating ShardedTensor.:UserWarning''',
     # Ignore torch pytree deprecated warnings
-    '''ignore:torch.utils._pytree._register_pytree_node is deprecated.*.UserWarning'''
+    '''ignore:torch.utils._pytree._register_pytree_node is deprecated.*:UserWarning'''
 
 ]
 
