--- a/pyproject.toml
+++ b/pyproject.toml
@@ -152,8 +152,9 @@ filterwarnings = [
     # Ignore torch sharded tensor deprecated warnings
     '''ignore:Please use DTensor instead and we are deprecating ShardedTensor.:UserWarning''',
     # Ignore torch pytree deprecated warnings
-    '''ignore:torch.utils._pytree._register_pytree_node is deprecated.*:UserWarning'''
-
+    '''ignore:torch.utils._pytree._register_pytree_node is deprecated.*:UserWarning''',
+    # Ignore autograd kernel warning inside DeepSpeed
+    '''ignore:c10d::broadcast_: an autograd kernel was not registered to the Autograd key(s).*:UserWarning'''
 ]
 
 # Coverage
