--- a/docker/build_matrix.yaml
+++ b/docker/build_matrix.yaml
@@ -23,7 +23,7 @@
   PYTORCH_NIGHTLY_VERSION: ''
   PYTORCH_VERSION: 2.1.2
   TAGS:
-  - mosaicml/pytorch:2.1.2_cu121-python3.10-ubuntu20.04
+  - mosaicml/pytorch:2.1.2-cu121-python3.10-ubuntu20.04
   - mosaicml/pytorch:latest
   TARGET: pytorch_stage
   TORCHVISION_VERSION: 0.16.2
@@ -51,7 +51,7 @@
   PYTORCH_NIGHTLY_VERSION: ''
   PYTORCH_VERSION: 2.1.2
   TAGS:
-  - mosaicml/pytorch:2.1.2_cu121-python3.10-ubuntu20.04-aws
+  - mosaicml/pytorch:2.1.2-cu121-python3.10-ubuntu20.04-aws
   - mosaicml/pytorch:latest-aws
   TARGET: pytorch_stage
   TORCHVISION_VERSION: 0.16.2
@@ -66,7 +66,7 @@
   PYTORCH_NIGHTLY_VERSION: ''
   PYTORCH_VERSION: 2.1.2
   TAGS:
-  - mosaicml/pytorch:2.1.2_cpu-python3.10-ubuntu20.04
+  - mosaicml/pytorch:2.1.2-cpu-python3.10-ubuntu20.04
   - mosaicml/pytorch:latest_cpu
   TARGET: pytorch_stage
   TORCHVISION_VERSION: 0.16.2
@@ -86,7 +86,7 @@
   PYTORCH_NIGHTLY_VERSION: ''
   PYTORCH_VERSION: 2.0.1
   TAGS:
-  - mosaicml/pytorch:2.0.1_cu118-python3.10-ubuntu20.04
+  - mosaicml/pytorch:2.0.1-cu118-python3.10-ubuntu20.04
   TARGET: pytorch_stage
   TORCHVISION_VERSION: 0.15.2
 - AWS_OFI_NCCL_VERSION: v1.7.4-aws
@@ -105,7 +105,7 @@
   PYTORCH_NIGHTLY_VERSION: ''
   PYTORCH_VERSION: 2.0.1
   TAGS:
-  - mosaicml/pytorch:2.0.1_cu118-python3.10-ubuntu20.04-aws
+  - mosaicml/pytorch:2.0.1-cu118-python3.10-ubuntu20.04-aws
   TARGET: pytorch_stage
   TORCHVISION_VERSION: 0.15.2
 - AWS_OFI_NCCL_VERSION: ''
@@ -119,7 +119,7 @@
   PYTORCH_NIGHTLY_VERSION: ''
   PYTORCH_VERSION: 2.0.1
   TAGS:
-  - mosaicml/pytorch:2.0.1_cpu-python3.10-ubuntu20.04
+  - mosaicml/pytorch:2.0.1-cpu-python3.10-ubuntu20.04
   TARGET: pytorch_stage
   TORCHVISION_VERSION: 0.15.2
 - AWS_OFI_NCCL_VERSION: ''
@@ -133,7 +133,7 @@
   PYTORCH_NIGHTLY_VERSION: ''
   PYTORCH_VERSION: 1.13.1
   TAGS:
-  - mosaicml/pytorch:1.13.1_cu117-python3.10-ubuntu20.04
+  - mosaicml/pytorch:1.13.1-cu117-python3.10-ubuntu20.04
   TARGET: pytorch_stage
   TORCHVISION_VERSION: 0.14.1
 - AWS_OFI_NCCL_VERSION: v1.7.4-aws
@@ -147,7 +147,7 @@
   PYTORCH_NIGHTLY_VERSION: ''
   PYTORCH_VERSION: 1.13.1
   TAGS:
-  - mosaicml/pytorch:1.13.1_cu117-python3.10-ubuntu20.04-aws
+  - mosaicml/pytorch:1.13.1-cu117-python3.10-ubuntu20.04-aws
   TARGET: pytorch_stage
   TORCHVISION_VERSION: 0.14.1
 - AWS_OFI_NCCL_VERSION: ''
@@ -161,7 +161,7 @@
   PYTORCH_NIGHTLY_VERSION: ''
   PYTORCH_VERSION: 1.13.1
   TAGS:
-  - mosaicml/pytorch:1.13.1_cpu-python3.10-ubuntu20.04
+  - mosaicml/pytorch:1.13.1-cpu-python3.10-ubuntu20.04
   TARGET: pytorch_stage
   TORCHVISION_VERSION: 0.14.1
 - AWS_OFI_NCCL_VERSION: ''
@@ -188,7 +188,7 @@
   PYTORCH_NIGHTLY_VERSION: dev20240110+cu121
   PYTORCH_VERSION: 2.3.0
   TAGS:
-  - mosaicml/pytorch:2.3.0_cu121-nightly20240110-python3.10-ubuntu20.04
+  - mosaicml/pytorch:2.3.0-cu121-nightly20240110-python3.10-ubuntu20.04
   TARGET: pytorch_stage
   TORCHVISION_VERSION: 0.18.0
 - AWS_OFI_NCCL_VERSION: ''
@@ -232,7 +232,7 @@
   PYTORCH_NIGHTLY_VERSION: ''
   PYTORCH_VERSION: 2.1.2
   TAGS:
-  - mosaicml/composer:0.17.2_cpu
-  - mosaicml/composer:latest_cpu
+  - mosaicml/composer:0.17.2-cpu
+  - mosaicml/composer:latest-cpu
   TARGET: composer_stage
   TORCHVISION_VERSION: 0.16.2
