--- a/docker/build_matrix.yaml
+++ b/docker/build_matrix.yaml
@@ -122,48 +122,48 @@
   - mosaicml/pytorch:2.0.1_cpu-python3.10-ubuntu20.04
   TARGET: pytorch_stage
   TORCHVISION_VERSION: 0.15.2
-- AWS_OFI_NCCL_VERSION: ''
-  BASE_IMAGE: nvidia/cuda:11.7.1-cudnn8-devel-ubuntu20.04
-  CUDA_VERSION: 11.7.1
-  IMAGE_NAME: torch-1-13-1-cu117
-  MOFED_VERSION: 5.5-1.0.3.2
-  NVIDIA_REQUIRE_CUDA_OVERRIDE: ''
-  PYTHON_VERSION: '3.11'
-  PYTORCH_NIGHTLY_URL: ''
-  PYTORCH_NIGHTLY_VERSION: ''
-  PYTORCH_VERSION: 1.13.1
-  TAGS:
-  - mosaicml/pytorch:1.13.1_cu117-python3.10-ubuntu20.04
-  TARGET: pytorch_stage
-  TORCHVISION_VERSION: 0.14.1
-- AWS_OFI_NCCL_VERSION: v1.7.4-aws
-  BASE_IMAGE: nvidia/cuda:11.7.1-cudnn8-devel-ubuntu20.04
-  CUDA_VERSION: 11.7.1
-  IMAGE_NAME: torch-1-13-1-cu117-aws
-  MOFED_VERSION: ''
-  NVIDIA_REQUIRE_CUDA_OVERRIDE: ''
-  PYTHON_VERSION: '3.11'
-  PYTORCH_NIGHTLY_URL: ''
-  PYTORCH_NIGHTLY_VERSION: ''
-  PYTORCH_VERSION: 1.13.1
-  TAGS:
-  - mosaicml/pytorch:1.13.1_cu117-python3.10-ubuntu20.04-aws
-  TARGET: pytorch_stage
-  TORCHVISION_VERSION: 0.14.1
-- AWS_OFI_NCCL_VERSION: ''
-  BASE_IMAGE: ubuntu:20.04
-  CUDA_VERSION: ''
-  IMAGE_NAME: torch-1-13-1-cpu
-  MOFED_VERSION: ''
-  NVIDIA_REQUIRE_CUDA_OVERRIDE: ''
-  PYTHON_VERSION: '3.11'
-  PYTORCH_NIGHTLY_URL: ''
-  PYTORCH_NIGHTLY_VERSION: ''
-  PYTORCH_VERSION: 1.13.1
-  TAGS:
-  - mosaicml/pytorch:1.13.1_cpu-python3.10-ubuntu20.04
-  TARGET: pytorch_stage
-  TORCHVISION_VERSION: 0.14.1
+# - AWS_OFI_NCCL_VERSION: ''
+#   BASE_IMAGE: nvidia/cuda:11.7.1-cudnn8-devel-ubuntu20.04
+#   CUDA_VERSION: 11.7.1
+#   IMAGE_NAME: torch-1-13-1-cu117
+#   MOFED_VERSION: 5.5-1.0.3.2
+#   NVIDIA_REQUIRE_CUDA_OVERRIDE: ''
+#   PYTHON_VERSION: '3.11'
+#   PYTORCH_NIGHTLY_URL: ''
+#   PYTORCH_NIGHTLY_VERSION: ''
+#   PYTORCH_VERSION: 1.13.1
+#   TAGS:
+#   - mosaicml/pytorch:1.13.1_cu117-python3.10-ubuntu20.04
+#   TARGET: pytorch_stage
+#   TORCHVISION_VERSION: 0.14.1
+# - AWS_OFI_NCCL_VERSION: v1.7.4-aws
+#   BASE_IMAGE: nvidia/cuda:11.7.1-cudnn8-devel-ubuntu20.04
+#   CUDA_VERSION: 11.7.1
+#   IMAGE_NAME: torch-1-13-1-cu117-aws
+#   MOFED_VERSION: ''
+#   NVIDIA_REQUIRE_CUDA_OVERRIDE: ''
+#   PYTHON_VERSION: '3.11'
+#   PYTORCH_NIGHTLY_URL: ''
+#   PYTORCH_NIGHTLY_VERSION: ''
+#   PYTORCH_VERSION: 1.13.1
+#   TAGS:
+#   - mosaicml/pytorch:1.13.1_cu117-python3.10-ubuntu20.04-aws
+#   TARGET: pytorch_stage
+#   TORCHVISION_VERSION: 0.14.1
+# - AWS_OFI_NCCL_VERSION: ''
+#   BASE_IMAGE: ubuntu:20.04
+#   CUDA_VERSION: ''
+#   IMAGE_NAME: torch-1-13-1-cpu
+#   MOFED_VERSION: ''
+#   NVIDIA_REQUIRE_CUDA_OVERRIDE: ''
+#   PYTHON_VERSION: '3.11'
+#   PYTORCH_NIGHTLY_URL: ''
+#   PYTORCH_NIGHTLY_VERSION: ''
+#   PYTORCH_VERSION: 1.13.1
+#   TAGS:
+#   - mosaicml/pytorch:1.13.1_cpu-python3.10-ubuntu20.04
+#   TARGET: pytorch_stage
+#   TORCHVISION_VERSION: 0.14.1
 - AWS_OFI_NCCL_VERSION: ''
   BASE_IMAGE: nvidia/cuda:12.1.0-cudnn8-devel-ubuntu20.04
   CUDA_VERSION: 12.1.0
