--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -353,7 +353,8 @@ RUN apt-get update && \
 RUN pip install --no-cache-dir --upgrade \
     certifi${CERTIFI_VERSION} \
     ipython${IPYTHON_VERSION} \
-    urllib3${URLLIB3_VERSION}
+    urllib3${URLLIB3_VERSION} \
+    python-snappy
 
 ##################################################
 # Override NVIDIA mistaken env var for 11.8 images
