disk usage print logs

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -96,8 +96,8 @@ RUN if [ -n "$CUDA_VERSION" ] ; then \
         wget -P /tmp/cuda-keyring https://developer.download.nvidia.com/compute/cuda/repos/ubuntu2004/x86_64/cuda-keyring_1.0-1_all.deb && \
         dpkg -i /tmp/cuda-keyring/cuda-keyring_1.0-1_all.deb && \
         rm -rf /tmp/cuda-keyring ; \
+        du -hs /var/lib/apt/lists/* /usr/lib/python3/* \
     fi
-
 RUN apt-get update && \
     apt-get install -y --no-install-recommends \
         libgomp1 \
@@ -129,7 +129,8 @@ RUN apt-get update && \
         htop && \
     apt-get autoclean && \
     apt-get clean && \
-    rm -rf /var/lib/apt/lists/*
+    rm -rf /var/lib/apt/lists/* \
+    du -hs /var/lib/apt/lists/* /usr/lib/python3/*
 
 ###############################
 # Install latest version of git
@@ -139,7 +140,8 @@ RUN add-apt-repository ppa:git-core/ppa && \
         git && \
     apt-get autoclean && \
     apt-get clean && \
-    rm -rf /var/lib/apt/lists/*
+    rm -rf /var/lib/apt/lists/* \
+    du -hs /var/lib/apt/lists/* /usr/lib/python3/*
 
 ##############################
 # Install NodeJS (for Pyright)
@@ -149,7 +151,8 @@ RUN \
     apt-get install -y --no-install-recommends nodejs && \
     apt-get autoclean && \
     apt-get clean && \
-    rm -rf /var/lib/apt/lists/*
+    rm -rf /var/lib/apt/lists/* \
+    du -hs /var/lib/apt/lists/* /usr/lib/python3/*
 
 ################
 # Install Python
@@ -169,10 +172,12 @@ RUN add-apt-repository ppa:deadsnakes/ppa && \
     python${PYTHON_VERSION}-venv && \
     apt-get autoclean && \
     apt-get clean && \
-    rm -rf /var/lib/apt/lists/*
+    rm -rf /var/lib/apt/lists/* \
+    du -hs /var/lib/apt/lists/* /usr/lib/python3/*
 
 RUN curl -fsSL https://bootstrap.pypa.io/get-pip.py | python${PYTHON_VERSION} - && \
-    pip${PYTHON_VERSION} install --no-cache-dir --upgrade 'pip<23' setuptools
+    pip${PYTHON_VERSION} install --no-cache-dir --upgrade 'pip<23' setuptools \
+    du -hs /var/lib/apt/lists/* /usr/lib/python3/*
 
 #####################
 # Install pillow-simd
@@ -186,7 +191,8 @@ COPY pillow_stub /tmp/pillow_stub
 
 RUN pip${PYTHON_VERSION} install --no-cache-dir --upgrade /tmp/pillow_stub && \
     pip${PYTHON_VERSION} install --no-cache-dir --upgrade pillow_simd==${PILLOW_SIMD_VERSION} && \
-    rm -rf /tmp/pillow_stub
+    rm -rf /tmp/pillow_stub \
+    du -hs /var/lib/apt/lists/* /usr/lib/python3/*
 
 #################
 # Install Pytorch
@@ -206,10 +212,12 @@ RUN if [ -z "$PYTORCH_NIGHTLY_URL" ] ; then \
         pip${PYTHON_VERSION} install --no-cache-dir --find-links https://download.pytorch.org/whl/torch_stable.html \
             torch==${PYTORCH_VERSION}+${CUDA_VERSION_TAG} \
             torchvision==${TORCHVISION_VERSION}+${CUDA_VERSION_TAG} ; \
+            du -hs /var/lib/apt/lists/* /usr/lib/python3/* \
     else \
         pip${PYTHON_VERSION} install --no-cache-dir --pre --index-url ${PYTORCH_NIGHTLY_URL} \
             torch==${PYTORCH_VERSION}.${PYTORCH_NIGHTLY_VERSION} \
 	        torchvision==${TORCHVISION_VERSION}.${PYTORCH_NIGHTLY_VERSION} ; \
+            du -hs /var/lib/apt/lists/* /usr/lib/python3/* \
     fi
 
 #####################################
@@ -231,6 +239,7 @@ RUN if [ -n "$AWS_OFI_NCCL_VERSION" ] ; then \
     apt-get autoclean && \
     apt-get clean && \
     rm -rf /var/lib/apt/lists/* ; \
+    du -hs /var/lib/apt/lists/* /usr/lib/python3/* \
     fi
 
 RUN if [ -n "$AWS_OFI_NCCL_VERSION" ] ; then \
@@ -241,6 +250,7 @@ RUN if [ -n "$AWS_OFI_NCCL_VERSION" ] ; then \
         apt-get update && \
         ./efa_installer.sh -y -g -d --skip-kmod --skip-limit-conf --no-verify && \
         rm -rf /tmp/aws-efa-installer* ; \
+        du -hs /var/lib/apt/lists/* /usr/lib/python3/* \
     fi
 
 RUN if [ -n "$AWS_OFI_NCCL_VERSION" ] ; then \
@@ -254,6 +264,7 @@ RUN if [ -n "$AWS_OFI_NCCL_VERSION" ] ; then \
             --disable-tests \
             --enable-platform-aws && \
         make && make install ; \
+        du -hs /var/lib/apt/lists/* /usr/lib/python3/* \
     fi
 
 ###################################
@@ -268,6 +279,7 @@ RUN if [ -n "$MOFED_VERSION" ] ; then \
         tar -zxvf /tmp/mofed/MLNX_OFED_LINUX-${MOFED_VERSION}-ubuntu20.04-x86_64.tgz -C /tmp/mofed && \
         /tmp/mofed/MLNX_OFED_LINUX-${MOFED_VERSION}-ubuntu20.04-x86_64/mlnxofedinstall --user-space-only --without-fw-update --force && \
         rm -rf /tmp/mofed ; \
+        du -hs /var/lib/apt/lists/* /usr/lib/python3/* \
     fi
 
 #####################
@@ -287,6 +299,7 @@ RUN if [[ -n "$CUDA_VERSION" ]] &&  [[ -z "${PYTORCH_NIGHTLY_URL}" ]]; then \
             --target  /usr/local/lib/python${PYTHON_VERSION}/dist-packages \
             ./ && \
         rm -rf /tmp/apex ; \
+        du -hs /var/lib/apt/lists/* /usr/lib/python3/* \
     fi
 
 ##########################
@@ -299,17 +312,20 @@ RUN if [ -n "$CUDA_VERSION" ] ; then \
         cd flash-attention && \
         MAX_JOBS=1 python${PYTHON_VERSION} setup.py install && \
         cd .. ; \
+        du -hs /var/lib/apt/lists/* /usr/lib/python3/* \
     fi
 
 ###############
 # Install cmake
 ###############
-RUN pip${PYTHON_VERSION} install --no-cache-dir cmake==3.26.3
+RUN pip${PYTHON_VERSION} install --no-cache-dir cmake==3.26.3 \
+    du -hs /var/lib/apt/lists/* /usr/lib/python3/*
 
 ###########################
 # Install Pandoc Dependency
 ###########################
-RUN pip${PYTHON_VERSION} install --no-cache-dir pandoc==2.3
+RUN pip${PYTHON_VERSION} install --no-cache-dir pandoc==2.3 \
+    du -hs /var/lib/apt/lists/* /usr/lib/python3/*
 
 ################################
 # Use the correct python version
@@ -330,7 +346,8 @@ RUN mkdir -p ${COMPOSER_PYTHON_BIN} && \
     # Include this folder, and the local bin folder, on the path
     echo "export PATH=~/.local/bin:$COMPOSER_PYTHON_BIN:$PATH" >> /etc/profile && \
     echo "export PATH=~/.local/bin:$COMPOSER_PYTHON_BIN:$PATH" >> /etc/bash.bashrc && \
-    echo "export PATH=~/.local/bin:$COMPOSER_PYTHON_BIN:$PATH" >> /etc/zshenv
+    echo "export PATH=~/.local/bin:$COMPOSER_PYTHON_BIN:$PATH" >> /etc/zshenv \
+    du -hs /var/lib/apt/lists/* /usr/lib/python3/*
 
 # Ensure that non-interactive shells load /etc/profile
 ENV BASH_ENV=/etc/profile
@@ -340,7 +357,8 @@ ENV BASH_ENV=/etc/profile
 #########################
 RUN useradd -rm -d /home/mosaicml -s /bin/bash -u 1000 -U -s /bin/bash mosaicml && \
     usermod -a -G sudo mosaicml && \
-    echo '%sudo ALL=(ALL) NOPASSWD:ALL' >> /etc/sudoers
+    echo '%sudo ALL=(ALL) NOPASSWD:ALL' >> /etc/sudoers \
+    du -hs /var/lib/apt/lists/* /usr/lib/python3/*
 
 #########################
 # Upgrade apt packages
@@ -349,7 +367,8 @@ RUN apt-get update && \
     apt-get upgrade -y && \
     apt-get autoclean && \
     apt-get clean && \
-    rm -rf /var/lib/apt/lists/*
+    rm -rf /var/lib/apt/lists/* \
+    du -hs /var/lib/apt/lists/* /usr/lib/python3/*
 
 #########################
 # Upgrade pip packages
@@ -358,7 +377,8 @@ RUN pip install --no-cache-dir --upgrade \
         certifi${CERTIFI_VERSION} \
         ipython${IPYTHON_VERSION} \
         urllib3${URLLIB3_VERSION} \
-        python-snappy
+        python-snappy \
+        du -hs /var/lib/apt/lists/* /usr/lib/python3/*
 
 ##################################################
 # Override NVIDIA mistaken env var for 11.8 images
